# icp-deploy-example

./: Cargo.toml  LICENSE  dfx.json
src/backend/: Cargo.toml  backend.did  lib.rs
src/deployer/: Cargo.toml  deployer.did  lib.rs
src/scripts/: Cargo.toml  deploy.rs  main.rs  utils.rs
