[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scripts"
path = "main.rs"

[dependencies]
candid = "0.7.16"
ic-agent = "0.20.0"
serde = "1.0.143"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
garcon = "0.2.3"
clap = "3.2.16"
sha2 = "0.10.6"
